# LyricsOverlay

./: .gitignore  Cargo.toml  README.md
src/: lyrics_fetch.rs  lyrics_parser.rs  main.rs  overlay.rs  runtime.rs  settings.rs  spotify.rs
src/lyrics_fetch/: cache.rs  lrc.rs  mod.rs  spotify.rs
src/overlay/: authentication_ui.rs  lyrics_ui.rs  mod.rs  resize.rs  settings_panel.rs
src/spotify/: auth.rs  mod.rs  poller.rs
