[package]
name = "spotify_lyrics"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.19"
oauth2 = "5.0.0"
oneshot = "0.1.13"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.8"
url = "2.5.8"
warp = { version = "0.4.2", features = ["server"] }
webbrowser = "1.1.0"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
egui = "0.33.3"
eframe = "0.33.3"

